@@ -21,3 +21,4 @@
 - use dlopen to probe for apparmor/selinux. This avoids having to depend
   on the existence of the appropriate libs, but still allows security
   context information to be queried on systems that provide them.
+- add in permissions for /dev/tty and fds 0-2 if they refer to devices.
