@@ -1,3 +1,12 @@
+2013-01-10  James Hunt  <james.hunt@ubuntu.com>
+
+	* TODO: Updated.
+	* src/procenv.c:
+	  - locale_map: Protect LC_NAME for FreeBSD.
+	  - show_env() and show_all_groups(): sort environment
+	    using strcoll(3) rather than strcmp(3) to make output
+	    locale-aware.
+
 2012-12-15  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/procenv.c: get_priorities(): Do not assert priorities
